--- a/src/locales/es/global.json
+++ b/src/locales/es/global.json
@@ -1,3 +1,10 @@
 {
-  "test": "test"
+  "logo": "El arte de hacer las cosas bien.",
+  "main": {
+    "cover":{
+    "title": "Lleva tu proyecto a buen puerto",
+    "subtitle": "El oceano digital es infinito",
+    "button": "Llámanos"
+    }
+  }
 }
