--- a/src/locales/en/global.json
+++ b/src/locales/en/global.json
@@ -1,5 +1,6 @@
 {
   "main":{
-    "WordRevealLoop": ["CREATE", "BELIEVE", "GROW"]
+    "WordRevealLoop": ["CREATE", "BELIEVE", "GROW"],
+    "StretchedTitle": "PASION"
   }
 }
