--- a/src/locales/es/global.json
+++ b/src/locales/es/global.json
@@ -1,5 +1,6 @@
 {
   "main":{
-    "WordRevealLoop": ["CREAR", "CREER", "CRECER"]
+    "WordRevealLoop": ["CREAR", "CREER", "CRECER"],
+    "StretchedTitle": "PASIÓN"
   }
 }
