--- a/src/locales/es/global.json
+++ b/src/locales/es/global.json
@@ -1,6 +1,10 @@
 {
   "main":{
     "WordRevealLoop": ["CREAR", "CREER", "CRECER"],
-    "StretchedTitle": "PASIÓN"
+    "StretchedTitle": "PASIÓN",
+    "Introduction":{
+      "title": "Mi nombre es Alejandro.",
+      "text": "Y mi pasión es CREAR. Crear cualquier cosa: muebles, historias, fotografías, comida, canciones... Pero me pagan por crear APLICACIONES WEB. Así que las creo. Porque soy bueno haciéndolas. No sólo eso. Pongo todo mi ALMA en ello. Y de esta forma, vivo creando. Y soy felíz. Me despierto todos los días con una sonrisa."
+    }
   }
 }
