--- a/src/locales/es/global.json
+++ b/src/locales/es/global.json
@@ -5,6 +5,12 @@
     "Introduction":{
       "title": "Mi nombre es Alejandro.",
       "text": "Y mi pasión es CREAR. Crear cualquier cosa: muebles, historias, fotografías, comida, canciones... Pero me pagan por crear APLICACIONES WEB. Así que las creo. Porque soy bueno haciéndolas. No sólo eso. Pongo todo mi ALMA en ello. Y de esta forma, vivo creando. Y soy felíz. Me despierto todos los días con una sonrisa."
-    }
+    },
+    "PasionSection":{
+      "smile":"Y a ti... ¿Qué te hace sonreir?",
+      "question1": "¿Cuál es tu",
+      "question2": "pasión?"
+
+    } 
   }
 }
