MouseBar with Quote

--- a/src/locales/en/global.json
+++ b/src/locales/en/global.json
@@ -15,7 +15,8 @@
       "question1": "What is your",
       "question2": "passion?",
       "dark1": "Put your heart and soul into it, and let me help you with this.",
-      "dark2": "I just need to know what genuinely inspires you."
+      "dark2": "I just need to know what genuinely inspires you.",
+      "quote": "inspiration exists, but it has to find you working"
     }
   }
 }
