--- a/src/locales/es/global.json
+++ b/src/locales/es/global.json
@@ -11,7 +11,8 @@
       "question1": "¿Cuál es tu",
       "question2": "pasión?",
       "dark1": "Dedícate a ello en cuerpo y alma, y déjame a mi ayudarte con esto.",
-      "dark2": "Sólo necesito saber que te inspira realmente."
+      "dark2": "Sólo necesito saber que te inspira realmente.",
+      "quote": "La inspiración existe, pero tiene que encontrarte trabajando."
     } 
   }
 }
