--- a/src/locales/en/global.json
+++ b/src/locales/en/global.json
@@ -17,6 +17,7 @@
       "dark1": "Put your heart and soul into it, and let me help you with this.",
       "dark2": "I just need to know what genuinely inspires you.",
       "quote": "Inspiration exists, but it has to find you working"
-    }
+    },
+    "Inspiration": "Inspiration"
   }
 }
