--- a/src/locales/es/global.json
+++ b/src/locales/es/global.json
@@ -16,7 +16,7 @@
     },
     "Inspiration": {
       "title": "Inspiración",
-      "subtitle": "Y en qué puedo ayudarte."
+      "subtitle": "¿En qué puedo ayudarte?"
     }
   }
 }
