logo with pointer to navigate

--- a/src/locales/en/global.json
+++ b/src/locales/en/global.json
@@ -37,7 +37,7 @@
       }
     },
     "Contact": {
-      "text": "Do you have any project in mind?",
+      "text": "Do you want to make your project come true?",
       "title": "Let's Talk",
       "button1": "Set",
       "button2": "a",
