--- a/src/locales/es/global.json
+++ b/src/locales/es/global.json
@@ -33,7 +33,7 @@
       }
     },
     "Contact": {
-      "text": "¿Tienes algún proyecto en mente?",
+      "text": "¿Quieres hacer tu proyecto realidad?",
       "title": "Hablemos",
       "button1": "Agenda",
       "button2": "una",
