--- a/src/locales/en/global.json
+++ b/src/locales/en/global.json
@@ -22,7 +22,7 @@
     "StretchedTitle": "PASSION",
     "Introduction": {
       "title": "My name is Alejandro.",
-      "text": "And my passion is CREATING. Creating anything: furniture, stories, photographs, dishes, songs... But I get paid to create WEB APPS. So I create them. Because I'm good at it. Not just that. I put my whole SOUL into it. And this is how I live creating. And I'm happy. I wake up every day with a smile."
+      "text": "And my passion is CREATING. Creating anything: furniture, stories, photographs, dishes, songs... But I get paid to create WEB APPS. So I create them. Because I'm good at it. Not just that. I put my whole SOUL into it. And this is how I live creating. And I'm happy. I wake up every single day with a smile."
     },
     "PassionSection": {
       "smile": "And you... what makes you smile?",
@@ -47,7 +47,13 @@
         "title": "app development"
       },
       "responsive": {
-        "title": "responsive design"
+        "title": "any platform"
+      },
+      "a11y": {
+        "title": "Inclusive access"
+      },
+      "ai": {
+        "title": "AI"
       }
     },
     "Contact": {
