About CTA in introduction section

--- a/src/locales/en/global.json
+++ b/src/locales/en/global.json
@@ -22,7 +22,8 @@
     "StretchedTitle": "PASSION",
     "Introduction": {
       "title": "My name is Alejandro.",
-      "text": "And my passion is CREATING. Creating anything: furniture, stories, photographs, dishes, songs... But I get paid to create WEB APPS. So I create them. Because I'm good at it. Not just that. I put my whole SOUL into it. And this is how I live creating. And I'm happy. I wake up every single day with a smile."
+      "text": "And my passion is CREATING. Creating anything: furniture, stories, photographs, dishes, songs... But I get paid to create WEB APPS. So I create them. Because I'm good at it. Not just that. I put my whole SOUL into it. And this is how I live creating. And I'm happy. I wake up every single day with a smile.",
+      "cta": "About me"
     },
     "PassionSection": {
       "smile": "And you... what makes you smile?",
