--- a/src/locales/es/global.json
+++ b/src/locales/es/global.json
@@ -22,7 +22,8 @@
     "StretchedTitle": "PASIÓN",
     "Introduction": {
       "title": "Mi nombre es Alejandro.",
-      "text": "Y mi pasión es CREAR. Crear cualquier cosa: muebles, historias, fotografías, comida, canciones... Pero me pagan por crear APLICACIONES WEB. Así que las creo. Porque soy bueno haciéndolas. No sólo eso. Pongo todo mi ALMA en ello. Y de esta forma, vivo creando. Y soy felíz. Me despierto todos los días con una sonrisa."
+      "text": "Y mi pasión es CREAR. Crear cualquier cosa: muebles, historias, fotografías, comida, canciones... Pero me pagan por crear APLICACIONES WEB. Así que las creo. Porque soy bueno haciéndolas. No sólo eso. Pongo todo mi ALMA en ello. Y de esta forma, vivo creando. Y soy felíz. Me despierto todos los días con una sonrisa.",
+      "cta": "Sobre mí"
     },
     "PassionSection": {
       "smile": "Y a ti... ¿Qué te hace sonreir?",
