projects new style

--- a/src/locales/en/projects.json
+++ b/src/locales/en/projects.json
@@ -54,7 +54,7 @@
         "contract": "Full-time contract",
         "company": "NTT-Data",
         "status": "In production",
-        "image": "inditex.svg"
+        "image": "inditex.png"
       },
       {
         "title": "Ada - Mi Carpeta Ciudadana",
