--- a/src/locales/es/projects.json
+++ b/src/locales/es/projects.json
@@ -54,7 +54,7 @@
         "contract": "Contrato a tiempo completo",
         "company": "NTT-Data",
         "status": "En producción",
-        "image": "inditex.svg"
+        "image": "inditex.png"
       },
       {
         "title": "Ada - Mi Carpeta Ciudadana",
